@@ -29,7 +29,7 @@ import re
 from glob import glob
 from datetime import datetime
 from collections import OrderedDict
-from os.path import join
+from os.path import join, basename
 from statistics import mean
 import numpy as np
 from sqlite3 import OperationalError
@@ -147,7 +147,8 @@ class ProtImportTsBase(ProtImport, ProtTomoBase):
                       label='Tomo5 mdoc?',
                       default=False,
                       condition='not (%s)' % self.NOT_MDOC_GUI_COND,
-                      help="If these mdocs were generated by the Tomography 5 software, check this box to ensure that the tilt axis angle is converted properly: -1 * TiltAxisAngle - 90")        
+                      help="If these mdocs were generated by the Tomography 5 software, check this box to ensure that "
+                           "the tilt axis angle is converted properly: -1 * TiltAxisAngle - 90")
         form.addParam('exclusionWords', params.StringParam,
                       label='Exclusion words:',
                       help="List of words separated by a space that the path "
@@ -442,8 +443,31 @@ class ProtImportTsBase(ProtImport, ProtTomoBase):
         return summary
 
     def _validate(self):
+        errMsg = []
         self._initialize()
+
+        # If the set of TS imported is heterogeneous in the number of tilt images and the angular data source chosen
+        # with a number of angles that corresponds to the lowest one possible (e. g. 58 if the TS in that compose the
+        # set are of 58 and 59 images), the import finishes successfully, but the size of the data stored will be
+        # different in the TS whose no. images is higher than the angles that correspond to the range, causing an
+        # erratic behaviour in the subsequent protocols
+        if self.anglesFrom.get() == 0:  # Angles from range
+            ih = ImageHandler()
+            filePaths = glob(self._globPattern)
+            filePaths = self._excludeByWords(filePaths)
+            nAngles = len(self._getTiltAngleRange())
+            badTsFiles = []
+            for tsFile in filePaths:
+                _, _, z, n = ih.getDimensions(tsFile)
+                if max(z, n) != nAngles:
+                    badTsFiles.append(basename(tsFile))
+            if badTsFiles:
+                errMsg.append(f'Some of the tilt-series introduced have a different number of images than the number '
+                              f'of angles that corresponds to the introduced range {nAngles} --> {str(badTsFiles)}')
+
         try:
+            # The previous validation must be carried out before this point as the matching OrderedDict generated uses
+            # as a size reference the number of angles in the case of angles introduced using a range
             matching = self.getMatchingFiles(isValidation=True)
 
         except Exception as e:
@@ -457,7 +481,6 @@ class ProtImportTsBase(ProtImport, ProtTomoBase):
         self._firstMatch = list(matching.items())[0]
         self._tiltAngleList = self._getSortedAngles(self._firstMatch[1])
 
-        errMsg = []
         errorMsgAngles = self._validateAngles()
         if errorMsgAngles:
             errMsg.append(errorMsgAngles)
@@ -882,7 +905,6 @@ class ProtImportTs(ProtImportTsBase):
                        default=0,
                        choices=[self.ANGLES_FROM_RANGE,
                                 self.ANGLES_FROM_HEADER,
-                                # self.ANGLES_FROM_MDOC,
                                 self.ANGLES_FROM_TLT],
                        display=params.EnumParam.DISPLAY_HLIST,
                        label='Import angles from',
