@@ -1,6 +1,9 @@
 v3.7.2:
  Users:
   - Import TS, TSM and tomos: remove double underscore from both the linked filenames and the tsIds.
+  - Import TS: add a validation for the case of heterogeneous sets of TS in the number of tilt images and providing the
+    angular data using a range. The cases avoided with this validation prevents erratic behavior in the subsequent
+    protocols.
  Developers:
   - Add to Tomogram and SetOfTomograms the attribute _ctfcorrected, the same way it was added to the tilt-series.
   - Update the TCL based on the previous point.
